y.output
Terminals which are not used

   RESERVED


Grammar

    0 $accept: Program $end

    1 Program: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionsDefinition
    3                         | FunctionsAndDeclarations FunctionsDeclaration
    4                         | FunctionsAndDeclarations Declaration
    5                         | FunctionsDefinition
    6                         | FunctionsDeclaration
    7                         | Declaration

    8 TypeSpec: CHAR
    9         | INT
   10         | DOUBLE
   11         | VOID
   12         | SHORT

   13 FunctionsDefinition: TypeSpec FunctionsDeclarator FunctionsBody

   14 FunctionsBody: LBRACE DeclarationsAndStatements RBRACE
   15              | LBRACE RBRACE

   16 DeclarationsAndStatements: DeclarationsAndStatements Declaration
   17                          | DeclarationsAndStatements Statement
   18                          | Declaration
   19                          | Statement

   20 FunctionsDeclaration: TypeSpec FunctionsDeclarator SEMI

   21 FunctionsDeclarator: IDENTIFIER LPAR ParamList RPAR

   22 ParamList: ParamList COMMA ParamDeclaration
   23          | ParamDeclaration

   24 ParamDeclaration: TypeSpec IDENTIFIER
   25                 | TypeSpec

   26 Declaration: TypeSpec DeclaratorList SEMI
   27            | error SEMI

   28 DeclaratorList: DeclaratorList COMMA Declarator
   29               | Declarator

   30 Declarator: IDENTIFIER
   31           | IDENTIFIER ASSIGN ExprList

   32 StatementList: StatementList StatementError
   33              | StatementError

   34 StatementError: Statement
   35               | error SEMI

   36 Statement: ExprList SEMI
   37          | LBRACE StatementList RBRACE
   38          | IF LPAR ExprList RPAR Statement
   39          | IF LPAR ExprList RPAR Statement ELSE Statement
   40          | WHILE LPAR ExprList RPAR Statement
   41          | RETURN ExprList SEMI
   42          | RETURN SEMI
   43          | SEMI
   44          | LBRACE error RBRACE
   45          | LBRACE RBRACE

   46 ExprList: ExprList COMMA Expr
   47         | Expr

   48 ExprCall: ExprCall COMMA Expr
   49         | Expr

   50 Expr: Expr OR Expr
   51     | Expr AND Expr
   52     | Expr BITWISEOR Expr
   53     | Expr BITWISEXOR Expr
   54     | Expr BITWISEAND Expr
   55     | Expr EQ Expr
   56     | Expr NE Expr
   57     | Expr GT Expr
   58     | Expr GE Expr
   59     | Expr LT Expr
   60     | Expr LE Expr
   61     | Expr ASSIGN Expr
   62     | Expr MUL Expr
   63     | Expr MOD Expr
   64     | Expr DIV Expr
   65     | Expr PLUS Expr
   66     | Expr MINUS Expr
   67     | IDENTIFIER LPAR RPAR
   68     | MINUS Expr
   69     | PLUS Expr
   70     | NOT Expr
   71     | IDENTIFIER LPAR ExprCall RPAR
   72     | LPAR ExprList RPAR
   73     | IDENTIFIER
   74     | CHRLIT
   75     | DECIMAL
   76     | NATURAL
   77     | IDENTIFIER LPAR error RPAR
   78     | LPAR error RPAR


Terminals, with rules where they appear

$end (0) 0
error (256) 27 35 44 77 78
CHAR (258) 8
IF (259) 38 39
ELSE (260) 39
WHILE (261) 40
INT (262) 9
SHORT (263) 12
DOUBLE (264) 10
RETURN (265) 41 42
VOID (266) 11
RESERVED (267)
BITWISEAND (268) 54
BITWISEOR (269) 52
BITWISEXOR (270) 53
AND (271) 51
ASSIGN (272) 31 61
MUL (273) 62
COMMA (274) 22 28 46 48
DIV (275) 64
EQ (276) 55
GE (277) 58
GT (278) 57
LBRACE (279) 14 15 37 44 45
LE (280) 60
LPAR (281) 21 38 39 40 67 71 72 77 78
LT (282) 59
MINUS (283) 66 68
MOD (284) 63
NE (285) 56
NOT (286) 70
OR (287) 50
PLUS (288) 65 69
RBRACE (289) 14 15 37 44 45
RPAR (290) 21 38 39 40 67 71 72 77 78
SEMI (291) 20 26 27 35 36 41 42 43
IDENTIFIER (292) 21 24 30 31 67 71 73 77
CHRLIT (293) 74
DECIMAL (294) 75
NATURAL (295) 76
LOW (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1, on right: 0
FunctionsAndDeclarations (44)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4
TypeSpec (45)
    on left: 8 9 10 11 12, on right: 13 20 24 25 26
FunctionsDefinition (46)
    on left: 13, on right: 2 5
FunctionsBody (47)
    on left: 14 15, on right: 13
DeclarationsAndStatements (48)
    on left: 16 17 18 19, on right: 14 16 17
FunctionsDeclaration (49)
    on left: 20, on right: 3 6
FunctionsDeclarator (50)
    on left: 21, on right: 13 20
ParamList (51)
    on left: 22 23, on right: 21 22
ParamDeclaration (52)
    on left: 24 25, on right: 22 23
Declaration (53)
    on left: 26 27, on right: 4 7 16 18
DeclaratorList (54)
    on left: 28 29, on right: 26 28
Declarator (55)
    on left: 30 31, on right: 28 29
StatementList (56)
    on left: 32 33, on right: 32 37
StatementError (57)
    on left: 34 35, on right: 32 33
Statement (58)
    on left: 36 37 38 39 40 41 42 43 44 45, on right: 17 19 34 38 39
    40
ExprList (59)
    on left: 46 47, on right: 31 36 38 39 40 41 46 72
ExprCall (60)
    on left: 48 49, on right: 48 71
Expr (61)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 71 72 73 74 75 76 77 78, on right: 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60 61 62 63 64 65 66 68 69 70


state 0

    0 $accept: . Program $end
    1 Program: . FunctionsAndDeclarations
    2 FunctionsAndDeclarations: . FunctionsAndDeclarations FunctionsDefinition
    3                         | . FunctionsAndDeclarations FunctionsDeclaration
    4                         | . FunctionsAndDeclarations Declaration
    5                         | . FunctionsDefinition
    6                         | . FunctionsDeclaration
    7                         | . Declaration
    8 TypeSpec: . CHAR
    9         | . INT
   10         | . DOUBLE
   11         | . VOID
   12         | . SHORT
   13 FunctionsDefinition: . TypeSpec FunctionsDeclarator FunctionsBody
   20 FunctionsDeclaration: . TypeSpec FunctionsDeclarator SEMI
   26 Declaration: . TypeSpec DeclaratorList SEMI
   27            | . error SEMI

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    Program                   go to state 7
    FunctionsAndDeclarations  go to state 8
    TypeSpec                  go to state 9
    FunctionsDefinition       go to state 10
    FunctionsDeclaration      go to state 11
    Declaration               go to state 12


state 1

   27 Declaration: error . SEMI

    SEMI  shift, and go to state 13


state 2

    8 TypeSpec: CHAR .

    $default  reduce using rule 8 (TypeSpec)


state 3

    9 TypeSpec: INT .

    $default  reduce using rule 9 (TypeSpec)


state 4

   12 TypeSpec: SHORT .

    $default  reduce using rule 12 (TypeSpec)


state 5

   10 TypeSpec: DOUBLE .

    $default  reduce using rule 10 (TypeSpec)


state 6

   11 TypeSpec: VOID .

    $default  reduce using rule 11 (TypeSpec)


state 7

    0 $accept: Program . $end

    $end  shift, and go to state 14


state 8

    1 Program: FunctionsAndDeclarations .  [$end]
    2 FunctionsAndDeclarations: FunctionsAndDeclarations . FunctionsDefinition
    3                         | FunctionsAndDeclarations . FunctionsDeclaration
    4                         | FunctionsAndDeclarations . Declaration
    8 TypeSpec: . CHAR
    9         | . INT
   10         | . DOUBLE
   11         | . VOID
   12         | . SHORT
   13 FunctionsDefinition: . TypeSpec FunctionsDeclarator FunctionsBody
   20 FunctionsDeclaration: . TypeSpec FunctionsDeclarator SEMI
   26 Declaration: . TypeSpec DeclaratorList SEMI
   27            | . error SEMI

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 1 (Program)

    TypeSpec              go to state 9
    FunctionsDefinition   go to state 15
    FunctionsDeclaration  go to state 16
    Declaration           go to state 17


state 9

   13 FunctionsDefinition: TypeSpec . FunctionsDeclarator FunctionsBody
   20 FunctionsDeclaration: TypeSpec . FunctionsDeclarator SEMI
   21 FunctionsDeclarator: . IDENTIFIER LPAR ParamList RPAR
   26 Declaration: TypeSpec . DeclaratorList SEMI
   28 DeclaratorList: . DeclaratorList COMMA Declarator
   29               | . Declarator
   30 Declarator: . IDENTIFIER
   31           | . IDENTIFIER ASSIGN ExprList

    IDENTIFIER  shift, and go to state 18

    FunctionsDeclarator  go to state 19
    DeclaratorList       go to state 20
    Declarator           go to state 21


state 10

    5 FunctionsAndDeclarations: FunctionsDefinition .

    $default  reduce using rule 5 (FunctionsAndDeclarations)


state 11

    6 FunctionsAndDeclarations: FunctionsDeclaration .

    $default  reduce using rule 6 (FunctionsAndDeclarations)


state 12

    7 FunctionsAndDeclarations: Declaration .

    $default  reduce using rule 7 (FunctionsAndDeclarations)


state 13

   27 Declaration: error SEMI .

    $default  reduce using rule 27 (Declaration)


state 14

    0 $accept: Program $end .

    $default  accept


state 15

    2 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionsDefinition .

    $default  reduce using rule 2 (FunctionsAndDeclarations)


state 16

    3 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionsDeclaration .

    $default  reduce using rule 3 (FunctionsAndDeclarations)


state 17

    4 FunctionsAndDeclarations: FunctionsAndDeclarations Declaration .

    $default  reduce using rule 4 (FunctionsAndDeclarations)


state 18

   21 FunctionsDeclarator: IDENTIFIER . LPAR ParamList RPAR
   30 Declarator: IDENTIFIER .  [COMMA, SEMI]
   31           | IDENTIFIER . ASSIGN ExprList

    ASSIGN  shift, and go to state 22
    LPAR    shift, and go to state 23

    $default  reduce using rule 30 (Declarator)


state 19

   13 FunctionsDefinition: TypeSpec FunctionsDeclarator . FunctionsBody
   14 FunctionsBody: . LBRACE DeclarationsAndStatements RBRACE
   15              | . LBRACE RBRACE
   20 FunctionsDeclaration: TypeSpec FunctionsDeclarator . SEMI

    LBRACE  shift, and go to state 24
    SEMI    shift, and go to state 25

    FunctionsBody  go to state 26


state 20

   26 Declaration: TypeSpec DeclaratorList . SEMI
   28 DeclaratorList: DeclaratorList . COMMA Declarator

    COMMA  shift, and go to state 27
    SEMI   shift, and go to state 28


state 21

   29 DeclaratorList: Declarator .

    $default  reduce using rule 29 (DeclaratorList)


state 22

   31 Declarator: IDENTIFIER ASSIGN . ExprList
   46 ExprList: . ExprList COMMA Expr
   47         | . Expr
   50 Expr: . Expr OR Expr
   51     | . Expr AND Expr
   52     | . Expr BITWISEOR Expr
   53     | . Expr BITWISEXOR Expr
   54     | . Expr BITWISEAND Expr
   55     | . Expr EQ Expr
   56     | . Expr NE Expr
   57     | . Expr GT Expr
   58     | . Expr GE Expr
   59     | . Expr LT Expr
   60     | . Expr LE Expr
   61     | . Expr ASSIGN Expr
   62     | . Expr MUL Expr
   63     | . Expr MOD Expr
   64     | . Expr DIV Expr
   65     | . Expr PLUS Expr
   66     | . Expr MINUS Expr
   67     | . IDENTIFIER LPAR RPAR
   68     | . MINUS Expr
   69     | . PLUS Expr
   70     | . NOT Expr
   71     | . IDENTIFIER LPAR ExprCall RPAR
   72     | . LPAR ExprList RPAR
   73     | . IDENTIFIER
   74     | . CHRLIT
   75     | . DECIMAL
   76     | . NATURAL
   77     | . IDENTIFIER LPAR error RPAR
   78     | . LPAR error RPAR

    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    CHRLIT      shift, and go to state 34
    DECIMAL     shift, and go to state 35
    NATURAL     shift, and go to state 36

    ExprList  go to state 37
    Expr      go to state 38


state 23

    8 TypeSpec: . CHAR
    9         | . INT
   10         | . DOUBLE
   11         | . VOID
   12         | . SHORT
   21 FunctionsDeclarator: IDENTIFIER LPAR . ParamList RPAR
   22 ParamList: . ParamList COMMA ParamDeclaration
   23          | . ParamDeclaration
   24 ParamDeclaration: . TypeSpec IDENTIFIER
   25                 | . TypeSpec

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    TypeSpec          go to state 39
    ParamList         go to state 40
    ParamDeclaration  go to state 41


state 24

    8 TypeSpec: . CHAR
    9         | . INT
   10         | . DOUBLE
   11         | . VOID
   12         | . SHORT
   14 FunctionsBody: LBRACE . DeclarationsAndStatements RBRACE
   15              | LBRACE . RBRACE
   16 DeclarationsAndStatements: . DeclarationsAndStatements Declaration
   17                          | . DeclarationsAndStatements Statement
   18                          | . Declaration
   19                          | . Statement
   26 Declaration: . TypeSpec DeclaratorList SEMI
   27            | . error SEMI
   36 Statement: . ExprList SEMI
   37          | . LBRACE StatementList RBRACE
   38          | . IF LPAR ExprList RPAR Statement
   39          | . IF LPAR ExprList RPAR Statement ELSE Statement
   40          | . WHILE LPAR ExprList RPAR Statement
   41          | . RETURN ExprList SEMI
   42          | . RETURN SEMI
   43          | . SEMI
   44          | . LBRACE error RBRACE
   45          | . LBRACE RBRACE
   46 ExprList: . ExprList COMMA Expr
   47         | . Expr
   50 Expr: . Expr OR Expr
   51     | . Expr AND Expr
   52     | . Expr BITWISEOR Expr
   53     | . Expr BITWISEXOR Expr
   54     | . Expr BITWISEAND Expr
   55     | . Expr EQ Expr
   56     | . Expr NE Expr
   57     | . Expr GT Expr
   58     | . Expr GE Expr
   59     | . Expr LT Expr
   60     | . Expr LE Expr
   61     | . Expr ASSIGN Expr
   62     | . Expr MUL Expr
   63     | . Expr MOD Expr
   64     | . Expr DIV Expr
   65     | . Expr PLUS Expr
   66     | . Expr MINUS Expr
   67     | . IDENTIFIER LPAR RPAR
   68     | . MINUS Expr
   69     | . PLUS Expr
   70     | . NOT Expr
   71     | . IDENTIFIER LPAR ExprCall RPAR
   72     | . LPAR ExprList RPAR
   73     | . IDENTIFIER
   74     | . CHRLIT
   75     | . DECIMAL
   76     | . NATURAL
   77     | . IDENTIFIER LPAR error RPAR
   78     | . LPAR error RPAR

    error       shift, and go to state 1
    CHAR        shift, and go to state 2
    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    INT         shift, and go to state 3
    SHORT       shift, and go to state 4
    DOUBLE      shift, and go to state 5
    RETURN      shift, and go to state 44
    VOID        shift, and go to state 6
    LBRACE      shift, and go to state 45
    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    RBRACE      shift, and go to state 46
    SEMI        shift, and go to state 47
    IDENTIFIER  shift, and go to state 33
    CHRLIT      shift, and go to state 34
    DECIMAL     shift, and go to state 35
    NATURAL     shift, and go to state 36

    TypeSpec                   go to state 48
    DeclarationsAndStatements  go to state 49
    Declaration                go to state 50
    Statement                  go to state 51
    ExprList                   go to state 52
    Expr                       go to state 38


state 25

   20 FunctionsDeclaration: TypeSpec FunctionsDeclarator SEMI .

    $default  reduce using rule 20 (FunctionsDeclaration)


state 26

   13 FunctionsDefinition: TypeSpec FunctionsDeclarator FunctionsBody .

    $default  reduce using rule 13 (FunctionsDefinition)


state 27

   28 DeclaratorList: DeclaratorList COMMA . Declarator
   30 Declarator: . IDENTIFIER
   31           | . IDENTIFIER ASSIGN ExprList

    IDENTIFIER  shift, and go to state 53

    Declarator  go to state 54


state 28

   26 Declaration: TypeSpec DeclaratorList SEMI .

    $default  reduce using rule 26 (Declaration)


state 29

   46 ExprList: . ExprList COMMA Expr
   47         | . Expr
   50 Expr: . Expr OR Expr
   51     | . Expr AND Expr
   52     | . Expr BITWISEOR Expr
   53     | . Expr BITWISEXOR Expr
   54     | . Expr BITWISEAND Expr
   55     | . Expr EQ Expr
   56     | . Expr NE Expr
   57     | . Expr GT Expr
   58     | . Expr GE Expr
   59     | . Expr LT Expr
   60     | . Expr LE Expr
   61     | . Expr ASSIGN Expr
   62     | . Expr MUL Expr
   63     | . Expr MOD Expr
   64     | . Expr DIV Expr
   65     | . Expr PLUS Expr
   66     | . Expr MINUS Expr
   67     | . IDENTIFIER LPAR RPAR
   68     | . MINUS Expr
   69     | . PLUS Expr
   70     | . NOT Expr
   71     | . IDENTIFIER LPAR ExprCall RPAR
   72     | . LPAR ExprList RPAR
   72     | LPAR . ExprList RPAR
   73     | . IDENTIFIER
   74     | . CHRLIT
   75     | . DECIMAL
   76     | . NATURAL
   77     | . IDENTIFIER LPAR error RPAR
   78     | . LPAR error RPAR
   78     | LPAR . error RPAR

    error       shift, and go to state 55
    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    CHRLIT      shift, and go to state 34
    DECIMAL     shift, and go to state 35
    NATURAL     shift, and go to state 36

    ExprList  go to state 56
    Expr      go to state 38


state 30

   50 Expr: . Expr OR Expr
   51     | . Expr AND Expr
   52     | . Expr BITWISEOR Expr
   53     | . Expr BITWISEXOR Expr
   54     | . Expr BITWISEAND Expr
   55     | . Expr EQ Expr
   56     | . Expr NE Expr
   57     | . Expr GT Expr
   58     | . Expr GE Expr
   59     | . Expr LT Expr
   60     | . Expr LE Expr
   61     | . Expr ASSIGN Expr
   62     | . Expr MUL Expr
   63     | . Expr MOD Expr
   64     | . Expr DIV Expr
   65     | . Expr PLUS Expr
   66     | . Expr MINUS Expr
   67     | . IDENTIFIER LPAR RPAR
   68     | . MINUS Expr
   68     | MINUS . Expr
   69     | . PLUS Expr
   70     | . NOT Expr
   71     | . IDENTIFIER LPAR ExprCall RPAR
   72     | . LPAR ExprList RPAR
   73     | . IDENTIFIER
   74     | . CHRLIT
   75     | . DECIMAL
   76     | . NATURAL
   77     | . IDENTIFIER LPAR error RPAR
   78     | . LPAR error RPAR

    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    CHRLIT      shift, and go to state 34
    DECIMAL     shift, and go to state 35
    NATURAL     shift, and go to state 36

    Expr  go to state 57


state 31

   50 Expr: . Expr OR Expr
   51     | . Expr AND Expr
   52     | . Expr BITWISEOR Expr
   53     | . Expr BITWISEXOR Expr
   54     | . Expr BITWISEAND Expr
   55     | . Expr EQ Expr
   56     | . Expr NE Expr
   57     | . Expr GT Expr
   58     | . Expr GE Expr
   59     | . Expr LT Expr
   60     | . Expr LE Expr
   61     | . Expr ASSIGN Expr
   62     | . Expr MUL Expr
   63     | . Expr MOD Expr
   64     | . Expr DIV Expr
   65     | . Expr PLUS Expr
   66     | . Expr MINUS Expr
   67     | . IDENTIFIER LPAR RPAR
   68     | . MINUS Expr
   69     | . PLUS Expr
   70     | . NOT Expr
   70     | NOT . Expr
   71     | . IDENTIFIER LPAR ExprCall RPAR
   72     | . LPAR ExprList RPAR
   73     | . IDENTIFIER
   74     | . CHRLIT
   75     | . DECIMAL
   76     | . NATURAL
   77     | . IDENTIFIER LPAR error RPAR
   78     | . LPAR error RPAR

    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    CHRLIT      shift, and go to state 34
    DECIMAL     shift, and go to state 35
    NATURAL     shift, and go to state 36

    Expr  go to state 58


state 32

   50 Expr: . Expr OR Expr
   51     | . Expr AND Expr
   52     | . Expr BITWISEOR Expr
   53     | . Expr BITWISEXOR Expr
   54     | . Expr BITWISEAND Expr
   55     | . Expr EQ Expr
   56     | . Expr NE Expr
   57     | . Expr GT Expr
   58     | . Expr GE Expr
   59     | . Expr LT Expr
   60     | . Expr LE Expr
   61     | . Expr ASSIGN Expr
   62     | . Expr MUL Expr
   63     | . Expr MOD Expr
   64     | . Expr DIV Expr
   65     | . Expr PLUS Expr
   66     | . Expr MINUS Expr
   67     | . IDENTIFIER LPAR RPAR
   68     | . MINUS Expr
   69     | . PLUS Expr
   69     | PLUS . Expr
   70     | . NOT Expr
   71     | . IDENTIFIER LPAR ExprCall RPAR
   72     | . LPAR ExprList RPAR
   73     | . IDENTIFIER
   74     | . CHRLIT
   75     | . DECIMAL
   76     | . NATURAL
   77     | . IDENTIFIER LPAR error RPAR
   78     | . LPAR error RPAR

    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    CHRLIT      shift, and go to state 34
    DECIMAL     shift, and go to state 35
    NATURAL     shift, and go to state 36

    Expr  go to state 59


state 33

   67 Expr: IDENTIFIER . LPAR RPAR
   71     | IDENTIFIER . LPAR ExprCall RPAR
   73     | IDENTIFIER .  [BITWISEAND, BITWISEOR, BITWISEXOR, AND, ASSIGN, MUL, COMMA, DIV, EQ, GE, GT, LE, LT, MINUS, MOD, NE, OR, PLUS, RPAR, SEMI]
   77     | IDENTIFIER . LPAR error RPAR

    LPAR  shift, and go to state 60

    $default  reduce using rule 73 (Expr)


state 34

   74 Expr: CHRLIT .

    $default  reduce using rule 74 (Expr)


state 35

   75 Expr: DECIMAL .

    $default  reduce using rule 75 (Expr)


state 36

   76 Expr: NATURAL .

    $default  reduce using rule 76 (Expr)


state 37

   31 Declarator: IDENTIFIER ASSIGN ExprList .  [COMMA, SEMI]
   46 ExprList: ExprList . COMMA Expr

    $default  reduce using rule 31 (Declarator)

    Conflict between rule 31 and token COMMA resolved as reduce (COMMA < ASSIGN).


state 38

   47 ExprList: Expr .  [COMMA, RPAR, SEMI]
   50 Expr: Expr . OR Expr
   51     | Expr . AND Expr
   52     | Expr . BITWISEOR Expr
   53     | Expr . BITWISEXOR Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . EQ Expr
   56     | Expr . NE Expr
   57     | Expr . GT Expr
   58     | Expr . GE Expr
   59     | Expr . LT Expr
   60     | Expr . LE Expr
   61     | Expr . ASSIGN Expr
   62     | Expr . MUL Expr
   63     | Expr . MOD Expr
   64     | Expr . DIV Expr
   65     | Expr . PLUS Expr
   66     | Expr . MINUS Expr

    BITWISEAND  shift, and go to state 62
    BITWISEOR   shift, and go to state 63
    BITWISEXOR  shift, and go to state 64
    AND         shift, and go to state 65
    ASSIGN      shift, and go to state 66
    MUL         shift, and go to state 67
    DIV         shift, and go to state 68
    EQ          shift, and go to state 69
    GE          shift, and go to state 70
    GT          shift, and go to state 71
    LE          shift, and go to state 72
    LT          shift, and go to state 73
    MINUS       shift, and go to state 74
    MOD         shift, and go to state 75
    NE          shift, and go to state 76
    OR          shift, and go to state 77
    PLUS        shift, and go to state 78

    $default  reduce using rule 47 (ExprList)


state 39

   24 ParamDeclaration: TypeSpec . IDENTIFIER
   25                 | TypeSpec .  [COMMA, RPAR]

    IDENTIFIER  shift, and go to state 79

    $default  reduce using rule 25 (ParamDeclaration)


state 40

   21 FunctionsDeclarator: IDENTIFIER LPAR ParamList . RPAR
   22 ParamList: ParamList . COMMA ParamDeclaration

    COMMA  shift, and go to state 80
    RPAR   shift, and go to state 81


state 41

   23 ParamList: ParamDeclaration .

    $default  reduce using rule 23 (ParamList)


state 42

   38 Statement: IF . LPAR ExprList RPAR Statement
   39          | IF . LPAR ExprList RPAR Statement ELSE Statement

    LPAR  shift, and go to state 82


state 43

   40 Statement: WHILE . LPAR ExprList RPAR Statement

    LPAR  shift, and go to state 83


state 44

   41 Statement: RETURN . ExprList SEMI
   42          | RETURN . SEMI
   46 ExprList: . ExprList COMMA Expr
   47         | . Expr
   50 Expr: . Expr OR Expr
   51     | . Expr AND Expr
   52     | . Expr BITWISEOR Expr
   53     | . Expr BITWISEXOR Expr
   54     | . Expr BITWISEAND Expr
   55     | . Expr EQ Expr
   56     | . Expr NE Expr
   57     | . Expr GT Expr
   58     | . Expr GE Expr
   59     | . Expr LT Expr
   60     | . Expr LE Expr
   61     | . Expr ASSIGN Expr
   62     | . Expr MUL Expr
   63     | . Expr MOD Expr
   64     | . Expr DIV Expr
   65     | . Expr PLUS Expr
   66     | . Expr MINUS Expr
   67     | . IDENTIFIER LPAR RPAR
   68     | . MINUS Expr
   69     | . PLUS Expr
   70     | . NOT Expr
   71     | . IDENTIFIER LPAR ExprCall RPAR
   72     | . LPAR ExprList RPAR
   73     | . IDENTIFIER
   74     | . CHRLIT
   75     | . DECIMAL
   76     | . NATURAL
   77     | . IDENTIFIER LPAR error RPAR
   78     | . LPAR error RPAR
